tests/ui/parser/recover-assoc-eq-missing-term.rs
#[cfg(FALSE)]
fn syntax() {
    bar::<Item =   >(); //~ ERROR missing type to the right of `=`
}

fn main() {}

// ferrocene-annotations: fls_utuu8mdbuyxm
// Generic Arguments
//
// ferrocene-annotations: fls_9i5msiuuyihf
// Paths
